# Point-Set-Polygonization

./: CMakeLists.txt  README.md
include/: ch2polyline_algo.hpp  common.hpp  graham_scan.hpp  incremental_algo.hpp  onion_algo.hpp  pick_algo.hpp  utils.hpp
scripts/: plot_graphs.py  run_test_cases.sh  test_them_all.sh
src/: ch2polyline_algo.cpp  graham_scan.cpp  incremental_algo.cpp  main.cpp  onion_algo.cpp  pick_algo.cpp  utils.cpp
